Move to GH Actions

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,26 @@
-{erl_opts, [debug_info, warnings_as_errors, warn_untyped_records]}.
+{erl_opts, [debug_info, warn_untyped_records]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose]}.
 {edoc_opts, [{preprocess, true}]}.
 {xref_checks, [undefined_function_calls]}.
 {deps, []}.
+
+{profiles, [
+    {test, [
+        {erl_opts, [debug_info, warn_untyped_records]},
+        {xref_checks, [
+            undefined_function_calls,
+            locals_not_used,
+            deprecated_function_calls
+        ]},
+
+        {xref_ignores, [
+        ]},
+
+        {dialyzer, [
+          {warnings, [
+              no_return
+          ]}
+        ]}
+    ]}
+]}.
