Fix dialyzer and docs

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,23 @@
-{erl_opts, [debug_info, warn_untyped_records]}.
+{erl_opts, [
+    debug_info,
+    warn_untyped_records
+   ]
+}.
+
+{deps, []}.
+
 {cover_enabled, true}.
 {eunit_opts, [verbose]}.
 {edoc_opts, [{preprocess, true}]}.
 {xref_checks, [undefined_function_calls]}.
-{deps, []}.
+
+{project_plugins, [rebar3_ex_doc]}.
+{hex, [{doc, ex_doc}]}.
+{ex_doc, [
+    {source_url, <<"https://github.com/erlangpack/sidejob">>},
+    {extras, [<<"README.md">>, <<"LICENSE">>]},
+    {main, <<"readme">>}
+]}.
 
 {profiles, [
     {test, [
@@ -20,6 +34,9 @@
         {dialyzer, [
           {warnings, [
               no_return
+          ]},
+          {plt_extra_apps, [
+              eunit
           ]}
         ]}
     ]}
